--- a/styles/main.css
+++ b/styles/main.css
@@ -1,83 +1,19 @@
 html {
   position: relative;
+  font-size: 100%;
 }
 
 /* header */
-#navbar {
-  position: fixed;
-  top: 0;
-  right: 108px;
-  left: 108px;
+
+nav.navbar div div div .signup:hover {
   background-color: #fff;
-  opacity: 1;
-  z-index: 1;
-}
-
-#navbar header {
-  display: flex;
-  flex-direction: row;
-  justify-content: space-between;
-}
-
-#navbar header .navbar_right {
-  display: flex;
-  flex-direction: row;
-  align-items: center;
-}
-
-#navbar header .navbar_left {
-  position: relative;
-}
-
-.product-nav:hover .sub_nav {
-  display: block;
-}
-
-.sub_nav {
-  position: absolute;
-  z-index: 1;
-  list-style: none;
-  background-color: rgb(240, 240, 240);
-  padding-left: 0;
-  display: none;
-}
-
-.sub_nav li {
-  display: block;
-  margin: 10px 20px;
-}
-
-.sub_nav li a {
-  text-decoration: none;
-  color: #000;
-}
-
-.sub_nav li a:hover {
-  opacity: 0.8;
-}
-
-.container {
-  margin-top: 120px;
-}
-
-#navbar .navbar_right .login {
-}
-
-#navbar .navbar_right .login:hover {
-  background-color: #fff;
-  opacity: 0.7;
-}
-
-#navbar .navbar_right .signup a {
-  color: #fff;
-}
-
-#navbar .navbar_right .signup:hover {
   opacity: 0.5;
 }
 
-#navbar .navbar_right button a {
-  text-decoration: none;
+.navbar-separate {
+  margin-top: 56px;
+  height: 1px;
+  width: 100%;
 }
 
 /* BODY */
