--- a/styles/main.css
+++ b/styles/main.css
@@ -21,6 +21,31 @@ nav.navbar div div div .signup:hover {
   height: 1px;
   width: 100%;
 }
+.search-form__input {
+  position: relative;
+}
+
+.search-form__input::before {
+  content: '';
+  display: block;
+  position: absolute;
+  width: 100px;
+  height: 100px;
+  background-color: #000;
+  top: 30px;
+  left: 0;
+}
+#livesearch {
+  display: block;
+  position: absolute;
+  left: 0;
+  top: 40px;
+  background-color: white;
+  width: 250px;
+  max-width: 300px;
+  max-height: 500px;
+  overflow: scroll;
+}
 
 /* BODY */
 #body {
